--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "sass": "^1.49.9"
   },
   "dependencies": {
-    "boostrap": "^2.0.0",
+    "bootstrap": "^2.0.0",
     "bootstrap": "^5.1.3"
   }
 }
