--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "sass": "^1.49.9"
   },
   "dependencies": {
-    "bootstrap": "^2.0.0",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "parallax-js": "^3.1.0"
   }
 }
